force-app/main/default/objects/Opportunity/fields/Are_we_similar_to_past_grantees__c.field-meta.xml
<CustomField>
    <fullName>Are_we_similar_to_past_grantees__c</fullName>
    <inlineHelpText>If a recurring grant</inlineHelpText>
    <label>Are we similar to past grantees?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>