force-app/main/default/objects/Opportunity/fields/Conflict_with_our_defined_Values__c.field-meta.xml
<CustomField>
    <fullName>Conflict_with_our_defined_Values__c</fullName>
    <inlineHelpText>Does it conflict with any of the following values</inlineHelpText>
    <label>Conflict with our defined Values?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>