force-app/main/default/objects/Opportunity/fields/CSG_Values__c.field-meta.xml
<CustomField>
    <fullName>CSG_Values__c</fullName>
    <inlineHelpText>CSG defined values</inlineHelpText>
    <label>What are the CSG Values align?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pursue the priorities of its member states</fullName>
            </value>
            <value>
                <fullName>Be nonpartisan and inclusive</fullName>
            </value>
            <value>
                <fullName>Engage leaders from all three branches of state government</fullName>
            </value>
            <value>
                <fullName>Have a regional focus, a national presence and a global reach</fullName>
            </value>
            <value>
                <fullName>Be a respected and trusted source for best practices and policy expertise</fullName>
            </value>
            <value>
                <fullName>Convene leader to leader interactions and foster leadership development</fullName>
            </value>
            <value>
                <fullName>Facilitate multistate solutions</fullName>
            </value>
            <value>
                <fullName>Zealously advocate for the states in our federal system of government</fullName>
            </value>
            <value>
                <fullName>Adhere to the highest ethical standards</fullName>
            </value>
            <value>
                <fullName>Respect diversity and act with civility</fullName>
            </value>
            <value>
                <fullName>Partner and collaborate with others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>