force-app/main/default/objects/Opportunity/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>internal approver reason/explanation for decline</description>
    <label>Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>