force-app/main/default/objects/Opportunity/fields/Do_the_Funding_Org_s_values_align__c.field-meta.xml
<CustomField>
    <fullName>Do_the_Funding_Org_s_values_align__c</fullName>
    <label>Do the Funding Org&apos;s values align?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>