force-app/main/default/objects/Opportunity/fields/Do_we_have_a_current_past_relationships__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_a_current_past_relationships__c</fullName>
    <label>Do we have a current/past relationships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>