force-app/main/default/objects/Opportunity/fields/Do_we_have_existing_knowledge_in_this_po__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_existing_knowledge_in_this_po__c</fullName>
    <label>Existing knowledge in this project space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>