force-app/main/default/objects/Opportunity/fields/Do_we_know_how_competitive_this_opp_is__c.field-meta.xml
<CustomField>
    <fullName>Do_we_know_how_competitive_this_opp_is__c</fullName>
    <label>Do we know how competitive this opp is?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>