force-app/main/default/objects/Opportunity/fields/Does_this_conflict_with_our_Mission__c.field-meta.xml
<CustomField>
    <fullName>Does_this_conflict_with_our_Mission__c</fullName>
    <description>Does this opportunity conflict with CSG&apos;s mission to provide non-partisan research and policy support to state leaders in all three branches?</description>
    <label>Does this conflict with our Mission?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>