force-app/main/default/objects/Opportunity/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>The Council of State Governments</label>
            </value>
            <value>
                <fullName>AAPCA</fullName>
                <label>The Association of Air Pollution Control</label>
            </value>
            <value>
                <fullName>APPA</fullName>
                <label>American Probation and Parole Associatio</label>
            </value>
            <value>
                <fullName>CANNRA</fullName>
                <label>Cannabis Regulators Association</label>
            </value>
            <value>
                <fullName>MIC3</fullName>
                <label>Military Interstate Children&apos;s Compact C</label>
            </value>
            <value>
                <fullName>NASFA</fullName>
                <label>National Association of ST Facility Adm</label>
            </value>
            <value>
                <fullName>NASPE</fullName>
                <label>National Association of ST Pers Exec</label>
            </value>
            <value>
                <fullName>NASTD</fullName>
                <label>National Association of ST Tech Director</label>
            </value>
            <value>
                <fullName>NEMA</fullName>
                <label>National Emergency Mgmt Association</label>
            </value>
            <value>
                <fullName>NHCSL</fullName>
                <label>National Hispanic Caucus of ST Legis</label>
            </value>
            <value>
                <fullName>SIDO</fullName>
                <label>State International Development Orgs</label>
            </value>
            <value>
                <fullName>WIG</fullName>
                <label>Women in Government</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>