force-app/main/default/objects/Opportunity/fields/Existing_relationship_with_suitable_org__c.field-meta.xml
<CustomField>
    <fullName>Existing_relationship_with_suitable_org__c</fullName>
    <inlineHelpText>Do we have an existing relationship with a suitable organization?</inlineHelpText>
    <label>Existing relationship with suitable org?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>