force-app/main/default/objects/Opportunity/fields/Full_Application_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Full_Application_Deadline__c</fullName>
    <label>When is the full application deadline</label>
    <type>Date</type>
</CustomField>