force-app/main/default/objects/Opportunity/fields/How_many__c.field-meta.xml
<CustomField>
    <fullName>How_many__c</fullName>
    <label>How many awards will be given?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>