force-app/main/default/objects/Opportunity/fields/How_time_intensive_will_the_proposal_be__c.field-meta.xml
<CustomField>
    <fullName>How_time_intensive_will_the_proposal_be__c</fullName>
    <inlineHelpText>Indicators: Page Limits, Complexity of Required Content, Needed Organization Partnerships</inlineHelpText>
    <label>How time intensive will the proposal be?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>