force-app/main/default/objects/Opportunity/fields/Identified_Member_needs__c.field-meta.xml
<CustomField>
    <fullName>Identified_Member_needs__c</fullName>
    <inlineHelpText>Member Requests
Member Surveys (incl. those conducted by outside organizations)
Recently trending/developing policy issues (e.g. legislative &amp; executive trends)</inlineHelpText>
    <label>Identified Member needs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>