force-app/main/default/objects/Opportunity/fields/If_so_what_kinds_of_match_are_allowed__c.field-meta.xml
<CustomField>
    <fullName>If_so_what_kinds_of_match_are_allowed__c</fullName>
    <label>If so, what kinds of match are allowed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>