force-app/main/default/objects/Opportunity/fields/If_so_when__c.field-meta.xml
<CustomField>
    <fullName>If_so_when__c</fullName>
    <label>If so, when?</label>
    <type>Date</type>
</CustomField>