force-app/main/default/objects/Opportunity/fields/Impact_of_writing_a_quality_proposal__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_writing_a_quality_proposal__c</fullName>
    <inlineHelpText>Do we have other application, project and/or organizational deadlines that would jeopardize our ability to write a quality proposal?</inlineHelpText>
    <label>Impact of writing a quality proposal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>