force-app/main/default/objects/Opportunity/fields/Is_a_pre_app_letter_of_intent_required__c.field-meta.xml
<CustomField>
    <fullName>Is_a_pre_app_letter_of_intent_required__c</fullName>
    <label>Is a pre-app/letter of intent required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>