force-app/main/default/objects/Opportunity/fields/Is_match_required__c.field-meta.xml
<CustomField>
    <fullName>Is_match_required__c</fullName>
    <label>Is match required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>