force-app/main/default/objects/Opportunity/fields/Is_the_amount_of_money__c.field-meta.xml
<CustomField>
    <fullName>Is_the_amount_of_money__c</fullName>
    <inlineHelpText>Is the amount of money worth the level of effort needed to develop a grant proposal?</inlineHelpText>
    <label>Amount of money to develop a proposal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>