force-app/main/default/objects/Opportunity/fields/Is_there_enough_funding_for_us_to_operat__c.field-meta.xml
<CustomField>
    <fullName>Is_there_enough_funding_for_us_to_operat__c</fullName>
    <label>Enough funding for a quality program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>