force-app/main/default/objects/Opportunity/fields/Limitations__c.field-meta.xml
<CustomField>
    <fullName>Limitations__c</fullName>
    <inlineHelpText>Are there limitations on staffing, training, travel, purchases or other activities?</inlineHelpText>
    <label>Limitations?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>