force-app/main/default/objects/Opportunity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>The Council of State Governments</label>
            </value>
            <value>
                <fullName>AAPCA</fullName>
                <label>The Association of Air Pollution Control</label>
            </value>
            <value>
                <fullName>APPA</fullName>
                <label>American Probation and Parole Association</label>
            </value>
            <value>
                <fullName>CANNRA</fullName>
                <label>Cannabis Regulators Association</label>
            </value>
            <value>
                <fullName>East</fullName>
                <label>East Region</label>
            </value>
            <value>
                <fullName>JC</fullName>
                <label>Justice Center</label>
            </value>
            <value>
                <fullName>MIC3</fullName>
                <label>Military Interstate Children&apos;s Compact C</label>
            </value>
            <value>
                <fullName>Midwest</fullName>
                <label>Midwest Region</label>
            </value>
            <value>
                <fullName>NASFA</fullName>
                <label>National Association of ST Facility Adm</label>
            </value>
            <value>
                <fullName>NASPE</fullName>
                <label>National Association of ST Pers Exec</label>
            </value>
            <value>
                <fullName>NASPTD</fullName>
                <label>National Association of ST Tech Director</label>
            </value>
            <value>
                <fullName>NATL</fullName>
                <label>National</label>
            </value>
            <value>
                <fullName>NATL HQ</fullName>
                <label>National Headquarters</label>
            </value>
            <value>
                <fullName>NEMA</fullName>
                <label>National Emergency Mgmt Association</label>
            </value>
            <value>
                <fullName>NHCSL</fullName>
                <label>National Hispanic Caucus of ST Legis</label>
            </value>
            <value>
                <fullName>SIDO</fullName>
                <label>State International Development Orgs</label>
            </value>
            <value>
                <fullName>South</fullName>
                <label>South Region</label>
            </value>
            <value>
                <fullName>West</fullName>
                <label>West Region</label>
            </value>
            <value>
                <fullName>WIG</fullName>
                <label>Women in Government</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>