force-app/main/default/objects/Opportunity/fields/Organization_strengths_align_with_needs__c.field-meta.xml
<CustomField>
    <fullName>Organization_strengths_align_with_needs__c</fullName>
    <inlineHelpText>Do our current organizational strengths align with the project needs?
Indicators: Member convenings
Group/Meeting Facilitation
Policy Research and Synthesis
Data Collection and Analysis</inlineHelpText>
    <label>Organization strengths align with needs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>