force-app/main/default/objects/Opportunity/fields/ProjectCategory__c.field-meta.xml
<CustomField>
    <fullName>ProjectCategory__c</fullName>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Capitalized</fullName>
            </value>
            <value>
                <fullName>Internal Non-billable</fullName>
            </value>
            <value>
                <fullName>Internal Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>