force-app/main/default/objects/Opportunity/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <label>Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>