force-app/main/default/objects/Opportunity/fields/ProjectManager__c.field-meta.xml
<CustomField>
    <fullName>ProjectManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>