force-app/main/default/objects/Opportunity/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Business Service</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Host State Meetings</fullName>
            </value>
            <value>
                <fullName>Junk Dump</fullName>
            </value>
            <value>
                <fullName>Lobbying</fullName>
            </value>
            <value>
                <fullName>Meetings</fullName>
            </value>
            <value>
                <fullName>Other Restricted</fullName>
            </value>
            <value>
                <fullName>Publications</fullName>
            </value>
            <value>
                <fullName>Special Projects</fullName>
            </value>
            <value>
                <fullName>Task Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>