force-app/main/default/objects/Opportunity/fields/Relative_to_current_previous_expertise__c.field-meta.xml
<CustomField>
    <fullName>Relative_to_current_previous_expertise__c</fullName>
    <inlineHelpText>Does the funding opportunity relate to our current or previous work and staff expertise?
Indicators:  Grant/Project History
Convenings History (conferences, policy academies, webinars, task forces)
Publications (Knowledge Center, The Current State, Capitol Ideas, policy reports, project deliverables, etc.)
Staff Professional Backgrounds</inlineHelpText>
    <label>Relative to current/previous expertise?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>