force-app/main/default/objects/Opportunity/fields/Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Restrictions__c</fullName>
    <label>Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Restrictions</valueSetName>
    </valueSet>
</CustomField>