force-app/main/default/objects/Opportunity/fields/SageRecId__c.field-meta.xml
<CustomField>
    <fullName>SageRecId__c</fullName>
    <externalId>true</externalId>
    <label>Sage Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>