force-app/main/default/objects/Opportunity/fields/Total_funding_per_year__c.field-meta.xml
<CustomField>
    <fullName>Total_funding_per_year__c</fullName>
    <label>Total funding per year?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>