force-app/main/default/objects/Opportunity/fields/What_are_the_projected_staffing_needs__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_projected_staffing_needs__c</fullName>
    <label>What are the projected staffing needs?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>