force-app/main/default/objects/Opportunity/fields/What_CSG_Pillars_Align__c.field-meta.xml
<CustomField>
    <fullName>What_CSG_Pillars_Align__c</fullName>
    <label>What CSG Pillars Align?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strengthening Democracy</fullName>
            </value>
            <value>
                <fullName>Navigating the New Economy</fullName>
            </value>
            <value>
                <fullName>Knowing What Works</fullName>
            </value>
            <value>
                <fullName>Justice for All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>