force-app/main/default/objects/Opportunity/fields/What_is_the_award_min_max__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_award_min_max__c</fullName>
    <label>What is the award min/max?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>