force-app/main/default/objects/Opportunity/fields/What_would_be_the_cost_of_a_partnership__c.field-meta.xml
<CustomField>
    <fullName>What_would_be_the_cost_of_a_partnership__c</fullName>
    <inlineHelpText>Indicators
Funding Split
Time Needed to Develop Partnership</inlineHelpText>
    <label>What would be the cost of a partnership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>