force-app/main/default/objects/Opportunity/fields/Will_this_help_improve_partnerships__c.field-meta.xml
<CustomField>
    <fullName>Will_this_help_improve_partnerships__c</fullName>
    <inlineHelpText>Would bringing on an organizational partner as a co-applicant significantly help our competitiveness or address an identified deficiency?
Indicators: Relationship with Funder
Prior experience or project history that is directly relatable to the opportunity</inlineHelpText>
    <label>Will this help/improve partnerships?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>