force-app/main/default/objects/Opportunity/recordTypes/Membership.recordType-meta.xml
<RecordType>
    <fullName>Membership</fullName>
    <active>true</active>
    <businessProcess>Membership Process</businessProcess>
    <label>Membership</label>
</RecordType>