force-app/main/default/objects/Opportunity/recordTypes/Sponsorship.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship</fullName>
    <active>true</active>
    <businessProcess>Grant Process</businessProcess>
    <label>Sponsorship</label>
</RecordType>